--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -4,5 +4,19 @@
     ViewData["Title"] = "Login";
 }
 
-<h1>Login</h1>
+<div class="login">
+    <div class="row justify-content-center mb-1">
+        <input placeholder="Brugernavn" />
+    </div>
+
+    <div class="row justify-content-center mb-1">
+        <input placeholder="Kodeord" />
+    </div>
+
+    <div class="row justify-content-center">
+        <button class="btn-dark">Login</button>
+    </div>
+</div>
+
+
 
