Påbegyndt på index html

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,6 +4,6 @@
     ViewData["Title"] = "Ustabil";
 }
 
-<div class="text-center">
-    
-</div>
+<video width="1140" height="400" controls>
+
+</video>
