--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -5,16 +5,16 @@
 }
 
 <div class="login">
-    <div class="row justify-content-center mb-1">
-        <input placeholder="Brugernavn" />
-    </div>
-
-    <div class="row justify-content-center mb-1">
-        <input placeholder="Kodeord" />
-    </div>
-
-    <div class="row justify-content-center">
-        <button class="btn-dark">Login</button>
+    <div class="row">
+        <div class="col-md-5"></div>
+        <div class="col-md-2">
+            <h2>Login</h2>
+            <input class="mt-3" placeholder="Brugernavn"/>
+            <input class="mt-2" placeholder="Kodeord"/>
+            <button id="button-login" class="btn-info mt-2">Login</button>
+            <button id="button-opretprofil" class="btn-danger mt-2">Opret profil</button>
+        </div>
+        <div class="col-md-5"></div>
     </div>
 </div>
 
