Sat en border og header in i Index html

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,6 +4,12 @@
     ViewData["Title"] = "Ustabil";
 }
 
-<video width="1140" height="400" controls>
+<div class="container">
+    <video width="1140" height="400" controls></video>
+</div>
 
-</video>
+<div id="border-div"></div>
+
+<div class="container text-center" id="aboutus-div">
+    <h1>Om VITEC</h1>
+</div>
