--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
     </header>
     
     
-    <div class="container">
+    <div>
         <partial name="_CookieConsentPartial" />
         <main role="main" class="pb-3">
             @RenderBody()
@@ -57,7 +57,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div class="container text-center">
             &copy; 2019 - _3_semester_projekt - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
