--- a/wwwroot/css/index.css
+++ b/wwwroot/css/index.css
@@ -1,3 +1,19 @@
 ﻿body {
     background: white;
 }
+
+
+#border-div {
+    display: block;
+    width: 95%;
+    height: 3.5px;
+    background: rgb(240,240,240);
+    box-shadow: 1px 2px 1px 1px rgb(220, 220, 220);
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+}
+
+#aboutus-div h1 {
+    margin-top: 15px;
+}
