--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,12 +4,19 @@
     ViewData["Title"] = "Ustabil";
 }
 
-<div class="container">
+<div class="container text-center">
     <video width="1140" height="400" controls></video>
-</div>
+    <div class="row mt-5">
+        <div class="col-md-6">
+            <h2>CD-ORD</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="col-md-6">
+            <h2>IntoWords</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </div>
 
-<div id="border-div"></div>
+    <a class="btn btn-info mt-3" href="Products">Læs mere om vores andre produkter</a>
 
-<div class="container text-center" id="aboutus-div">
-    <h1>Om VITEC</h1>
 </div>
