--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -9,14 +9,15 @@
         <div class="col-md-5"></div>
         <div class="col-md-2">
             <h2>Login</h2>
-            <input class="mt-3" placeholder="Brugernavn"/>
-            <input class="mt-2" placeholder="Kodeord"/>
-            <button id="button-login" class="btn-info mt-2">Login</button>
+            <input class="mt-3" placeholder="Brugernavn" />
+            <input type="password" class="mt-2" placeholder="Kodeord" />
+            <form method="get">
+                <button type="submit" id="button-login" class="btn-info mt-2" asp-page="/Profile">Login</button>
+            </form>
             <button id="button-opretprofil" class="btn-danger mt-2">Opret profil</button>
         </div>
         <div class="col-md-5"></div>
     </div>
 </div>
-
 
 
