--- a/Pages/Products.cshtml
+++ b/Pages/Products.cshtml
@@ -6,3 +6,74 @@
 
 <h1>Products</h1>
 
+<table class="table">
+    <thead class="thead-dark">
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Produktnavn</th>
+            <th scope="col">Detaljer</th>
+            <th scope="col">Pris</th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th scope="row">1</th>
+            <td style="font-size:20px; font-weight:bold;">C-Pen</td>
+            <td>Skan ord eller sætninger ind på computeren, så de kan læses op</td>
+            <td>500-.</td>
+            <td><img style="display:block;" width="50%" height="50%" src="http://dummyimage.com/68x68/000/fff" /></td>
+            <td><button type="button" class="btn btn-primary">Køb</button></td>
+        </tr>
+        <tr>
+            <th scope="row">2</th>
+            <td style="font-size:20px; font-weight:bold;">Hukommelsesleg</td>
+            <td>Online program designet til at træne arbejdshukommelsen hos børn og voksne</td>
+            <td>800-.</td>
+            <td><img style="display:block;" width="50%" height="50%" src="http://dummyimage.com/68x68/000/fff" /></td>
+            <td><button type="button" class="btn btn-primary">Køb</button></td>
+        </tr>
+        <tr>
+            <th scope="row">3</th>
+            <td style="font-size:20px; font-weight:bold;">Håndskanner</td>
+            <td>Lille, mobil håndskanner, der gør tekster tilgængelige for oplæsning</td>
+            <td>1000-.</td>
+            <td><img style="display:block;" width="50%" height="50%" src="http://dummyimage.com/68x68/000/fff" /></td>
+            <td><button type="button" class="btn btn-primary">Køb</button></td>
+        </tr>
+        <tr>
+            <th scope="row">3</th>
+            <td style="font-size:20px; font-weight:bold;">IT-Rygsæk</td>
+            <td>De vigtigste hjælpemidler til læsning og skrivning samlet i en praktisk rygsæk</td>
+            <td>700-.</td>
+            <td><img style="display:block;" width="50%" height="50%" src="http://dummyimage.com/68x68/000/fff" /></td>
+            <td><button type="button" class="btn btn-primary">Køb</button></td>
+        </tr>
+        <tr>
+            <th scope="row">3</th>
+            <td style="font-size:20px; font-weight:bold;">Matematikleg Flex</td>
+            <td>Hjælp til elever med matematiksvanskeligheder</td>
+            <td>500-.</td>
+            <td><img style="display:block;" width="50%" height="50%" src="http://dummyimage.com/68x68/000/fff" /></td>
+            <td><button type="button" class="btn btn-primary">Køb</button></td>
+        </tr>
+        <tr>
+            <th scope="row">3</th>
+            <td style="font-size:20px; font-weight:bold;">MindView AT</td>
+            <td>Et læse- og skriveværktøj baseret på mindmapping</td>
+            <td>400-.</td>
+            <td><img style="display:block;" width="50%" height="50%" src="http://dummyimage.com/68x68/000/fff" /></td>
+            <td><button type="button" class="btn btn-primary">Køb</button></td>
+        </tr>
+        <tr>
+            <th scope="row">3</th>
+            <td style="font-size:20px; font-weight:bold;">MiVo</td>
+            <td>Træner brugen af skrivehjælpen i CD-ORD og IntoWords</td>
+            <td>900-.</td>
+            <td><img style="display:block;" width="50%" height="50%" src="http://dummyimage.com/68x68/000/fff" /></td>
+            <td><button type="button" class="btn btn-primary">Køb</button></td>
+        </tr>
+    </tbody>
+</table>
